<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Errors -->
    <string name="bad_request">Bad request</string>
    <string name="internal_server_error">The server cannot process the request</string>
    <string name="error_not_found">Error Not Found</string>
    <string name="user_not_authorized">You are not authorized</string>
    <string name="too_many_requests">Exceeded the number of request attempts</string>
    <string name="unknown_error">Unknown error</string>

<!--    Xml string resources-->
    <string name="events">Events</string>
    <string name="city_name">City name</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="start_date">Start Date:</string>
    <string name="event_start_date">Event Start Date</string>
    <string name="end_date">End Date:</string>
    <string name="event_end_date">Event End Date</string>
    <string name="favorites_comments">Favorites: 10 | Comments: 5</string>
    <string name="search_for_events">Search For Events</string>
    <string name="event_address">Event Address:</string>
    <string name="event_location">Event Location:</string>
    <string name="event_description_label">Event Description:</string>
    <string name="categories">Categories:</string>
    <string name="age_restriction">Age Restriction:</string>
    <string name="is_free">Is Event Free To Visit:</string>
    <string name="images">Images:</string>
    <string name="favorites_count">Favorites Count:</string>
    <string name="comments_count">Comments Count:</string>
    <string name="favorites">Favorites:</string>
    <string name="comments">Comments:</string>
    <string name="comments_btn">Comments</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="added_to_favourites">Added To Favourites</string>
    <string name="back">Back</string>
    <string name="evert_image">Evert Image</string>

</resources>