<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/event_iv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/placeholder_loading" />

        <TextView
            android:id="@+id/textViewEventTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_title"
            android:background="@color/lightYellow"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/ibm_plex_mono_medium"
            app:layout_constraintStart_toEndOf="@id/event_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/event_iv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/event_description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/ibm_plex_mono"
            app:layout_constraintStart_toStartOf="@id/textViewEventTitle"
            app:layout_constraintEnd_toEndOf="@id/textViewEventTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewEventTitle"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/start_date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/ibm_plex_mono"
            app:layout_constraintStart_toStartOf="@id/event_description_tv"
            app:layout_constraintTop_toBottomOf="@id/event_description_tv"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/start_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_start_date"
            android:textSize="12sp"
            android:fontFamily="@font/ibm_plex_mono"
            app:layout_constraintStart_toEndOf="@id/start_date_label_tv"
            app:layout_constraintEnd_toEndOf="@id/event_description_tv"
            app:layout_constraintTop_toTopOf="@id/start_date_label_tv"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/end_date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/ibm_plex_mono"
            app:layout_constraintStart_toStartOf="@id/start_date_label_tv"
            app:layout_constraintTop_toBottomOf="@id/start_date_tv"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/end_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_end_date"
            android:textSize="12sp"
            android:fontFamily="@font/ibm_plex_mono"
            app:layout_constraintStart_toEndOf="@id/end_date_label_tv"
            app:layout_constraintEnd_toEndOf="@id/start_date_tv"
            app:layout_constraintTop_toTopOf="@id/end_date_label_tv"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/favourites_comments_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/favorites_comments"
            android:textSize="12sp"
            android:fontFamily="@font/ibm_plex_mono"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/end_date_label_tv"
            app:layout_constraintTop_toBottomOf="@id/end_date_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>